# ratty

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.agents/skills/rgp-composer/assets/: template-scene.json
.agents/skills/rgp-composer/references/: naming-transmission.md  rgp.md
.claude/skills/rgp-composer/: SKILL.md
.claude/skills/rgp-composer/references/: art-direction.md  worked-examples.md
.github/workflows/: web.yml
Ratty-dev/: sparrowdb.txt
agent-extensions/: monitor.html
docs/: ecosystem-vision.md  upstreaming.md
docs/agents/: issue-tracker.md
docs/research/: avatar-survey.md  collaboration-groundwork.md  panes-feasibility.md  sound-survey.md
extension-agents/: draft-monito-notes.txt  draft-monito.txt  reseatch.txt  the-comune.txt  updated recommedation.txt
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
protocols/: graphics.md  macros.md  query.md  silk.md  sound.md  viz.md
ratty-ai-integration/docs/: All-skills.csv  INTEGRATION.md  if-it-doesnt-work.txt
ratty-ai-integration/docs/Uses/: Advanced.md  Fun.txt
ratty-ai-integration/ratty-ai/: Cargo.toml   README.md
ratty-ai-integration/ratty-ai/src/: Enhanced.cli.rs  main.rs
ratty-ai-integration/ratty-patch/src/AI/: bridge.rs  mod.rs
ratty-ai-integration/ratty-patch/src/rgp/: bevy_handler_patched_v2.rs  bevy_handlerold.txt
ratty-ai-integration/ratty-patch/src/terminal/: osc_parser.rs
site/: README.md  build-wasm.sh  index.html
site/player/: backend-null.js  backend-wasm.js  silk-player.js
site/styles/: site.css
src/: ai.rs  bookmarks.rs  config.rs  direct_render.rs  effects.rs  inline.rs  keyboard.rs  lib.rs  macros.rs  model.rs  mouse.rs  osc.rs  paths.rs  plugin.rs  query.rs  query_channel.rs  rgp.rs  runtime.rs  sound.rs  systems.rs  terminal.rs  viz.rs  viz_draw.rs  viz_wire.rs  web.rs
src/scene/: mobius.rs  mod.rs  stage.rs
tools/ratty-ai/: Cargo.toml
tools/ratty-ai/examples/: query-demo.sh  soul.sh
tools/ratty-ai/src/: main.rs
tools/silk/: Cargo.toml
tools/silk/docs/: rgp-truths.md
tools/silk/src/: cast.rs  compile.rs  main.rs  play.rs  probe.rs  scene.rs  validate.rs
transmissions/: README.md  index.json
transmissions/orchard-upside-down/: cast.silk  scene.json
transmissions/predator-and-frame/: cast.silk  scene.json
transmissions/soul/: cast.silk  scene.json
transmissions/stone-fruit/: cast.silk  scene.json
transmissions/the-same-animal/: cast.silk  scene.json
website/: claude.md
