[package]
name = "ratty"
version = "0.5.0"
description = "A GPU-rendered terminal emulator that supports inline 3D graphics"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/orhun/ratty"
repository = "https://github.com/orhun/ratty"
keywords = ["terminal", "emulator", "3d", "graphics"]
categories = ["command-line-utilities", "graphics"]
edition = "2024"
exclude = [
    "website/**",
    ".github/**",
    "widget/**",
    "graphify-out/**",
    "site/**",
    "tools/**",
    "transmissions/**",
]

[lib]
# `cdylib` is what wasm-bindgen consumes for the web build; `rlib` keeps the
# native binary and tests linking as before.
crate-type = ["rlib", "cdylib"]

[features]
# The kira-backed sound organ (M3.9). The wire parser (`osc.rs`), the kind
# registry, and the sound decision layer are always compiled; this feature
# gates only the playback backend. `--no-default-features` builds answer
# every sound.* command with an honest `unsupported` rejection.
default = ["sound"]
sound = ["dep:bevy_kira_audio"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
# The sound organ's playback backend (see [features]). Its bevy features
# (std/bevy_asset/bevy_log) are already in the curated list below, and
# bevy_audio stays off, as kira requires. Only ogg decoding is enabled —
# the embedded sound registry ships .ogg exclusively.
bevy_kira_audio = { version = "0.26", optional = true, default-features = false, features = [
    "ogg",
] }
bevy = { version = "0.19.0", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_log",
    "bevy_pbr",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_winit",
    "gltf_animation",
    "keyboard",
    "mouse",
    "png",
    "reflect_auto_register",
    "tonemapping_luts",
    "zstd_rust",
] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
parley_ratatui = "0.3.4"
# Used exclusively through the parley_ratatui::ratatui re-export; default
# features would pull crossterm, which is unused and does not build on wasm.
ratatui = { version = "0.30", default-features = false }
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stl_io = "0.11.0"
tobj = "4.0"
toml = "0.8"
vt100 = "0.16"
winit = { version = "0.30", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "3.6", features = ["wayland-data-control"] }
# Session nonce entropy; same alias as the wasm entry below because cargo
# rejects one crate under two names.
getrandom03 = { package = "getrandom", version = "0.3" }
bevy = { version = "0.19.0", default-features = false, features = [
    "multi_threaded",
    "wayland",
    "x11",
] }
etcetera = "0.11"
portable-pty = "0.8"
shellexpand = "3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "web",
    "webgpu",
] }
console_error_panic_hook = "0.1"
# Promise/JSON/Reflect bindings for RattySession.query; already in the
# tree transitively via Bevy's web stack, lockstep with wasm-bindgen.
js-sys = "0.3"
# Must match the wasm-bindgen-cli version used by site/build-wasm.sh.
wasm-bindgen = "=0.2.118"
# Web entropy backends for every getrandom major in the tree; 0.3+ also
# needs RUSTFLAGS='--cfg getrandom_backend="wasm_js"' (set by the build
# script and workflow).
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[build-dependencies]
winresource = "0.1.31"

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

# Web bundle profile: size-lean but fast enough to build in CI.
[profile.wasm-release]
inherits = "release"
lto = "thin"
opt-level = "z"
codegen-units = 1
