[package]
name = "ratty-ai"
version = "0.2.0"
edition = "2024"
description = "Pure-CLI control for the Ratty terminal emulator over OSC 777"
license = "MIT"
repository = "https://github.com/orhun/ratty"
keywords = ["ratty", "terminal", "cli", "osc", "3d"]
categories = ["command-line-utilities"]
# In-repo tool: it shares the terminal's parser via a `#[path]` include that
# reaches outside the crate directory, so it is not a crates.io package.
publish = false

# Standalone crate (not part of the root workspace, like tools/silk). It
# shares the terminal's own OSC parser verbatim via a path include, so the
# CLI and the terminal can never disagree about the wire format.

[dependencies]
clap = { version = "4.5", features = ["derive"] }
# 128-bit correlation tokens for `query`/`state`/`--ack`.
getrandom = "0.3"
# `--data` validation and reply pretty-printing (the shared wire module in
# ../../src/query.rs stays std-only; JSON lives at this edge).
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
# Raw-mode tty transport (termios + signal-safe restore).
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
